--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <body>
   <html>
-Hello there, awesome person!
+    <head>
+      <title> Maddies Webpage</title>
+    </head>
     </body>
   </html>
